--- a/demo-netty/pom.xml
+++ b/demo-netty/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.fire.demo</groupId>
+		<groupId>com.endlessspace.demo</groupId>
 		<artifactId>demo</artifactId>
 		<version>0.0.1</version>
 	</parent>
