--- a/demo-dubbo/demo-dubbo-provider/pom.xml
+++ b/demo-dubbo/demo-dubbo-provider/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>com.endlessspace.demo</groupId>
 		<artifactId>demo-dubbo</artifactId>
 		<version>0.0.1</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>demo-dubbo-provider</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
