--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -86,4 +86,17 @@
 			<version>2.2.9</version>
 		</dependency>
 	</dependencies>
+	
+	<dependencyManagement>
+     <dependencies>
+        <dependency>
+            <!-- Import dependency management from Spring Boot -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-dependencies</artifactId>
+            <version>1.5.2.RELEASE</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
 </project>
