--- a/demo-jvm/pom.xml
+++ b/demo-jvm/pom.xml
@@ -1,13 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.endlessspace.demo</groupId>
-		<artifactId>demo</artifactId>
-		<version>0.0.1</version>
-	</parent>
-	<artifactId>demo-jvm</artifactId>
+    <parent>
+        <groupId>com.endlessspace.demo</groupId>
+        <artifactId>demo</artifactId>
+        <version>0.0.1</version>
+    </parent>
+    <artifactId>demo-jvm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+    </dependencies>
 </project>
