--- a/demo-jvm/pom.xml
+++ b/demo-jvm/pom.xml
@@ -28,5 +28,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.32</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 </project>
